--- a/thad.ipynb
+++ b/thad.ipynb
@@ -234,10 +234,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import fastaparser\n",
+    "with open(\"seq_from_jp.txt\", \"r\") as input_data:\n",
+    "    for l in input_data.readlines():\n",
+    "        seqs = l.split(\",\")\n",
+    "        with open(\"jp_is_a_goober.fasta\", \"w\") as fasta_file:\n",
+    "            writer = fastaparser.Writer(fasta_file)\n",
+    "            for i in range(len(seqs)):\n",
+    "                fasta_sequence = fastaparser.FastaSequence(\n",
+    "                    sequence = seq[i].replace(\"'\", \"\").replace(\" \", \"\"),\n",
+    "                    # id = \"Seq\" + str(i),\n",
+    "                    description = \"BONG_HITS_4_JESUS\" + str(i)\n",
+    "                )\n",
+    "                writer.writefasta(fasta_sequence)\n"
+   ]
   }
  ],
  "metadata": {
